move neo4j from previous merge to new structure